--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "mongoose-paginate-v2": "^1.7.1"
   }
 }
